--- a/my-flux-worker/Dockerfile
+++ b/my-flux-worker/Dockerfile
@@ -2,8 +2,6 @@
 FROM pytorch/pytorch:2.2.1-cuda12.1-cudnn8-devel
 
 # --- Step 1: Copy worker code FIRST ---
-# This is the standard and most reliable way to include your code.
-# It relies on the Runpod build context being set correctly.
 WORKDIR /
 COPY ./src /src
 COPY ./workflow_api.json /workflow_api.json
@@ -23,6 +21,10 @@ WORKDIR /ComfyUI
 # --- Step 4: Install Python Dependencies ---
 RUN pip install --no-cache-dir -r requirements.txt
 
+# --- NEW Step 4a: Install FLUX Custom Nodes ---
+# This is the critical missing step. These nodes are required for the workflow.
+RUN git clone https://github.com/comfyanonymous/comfy-flux-nodes.git ./custom_nodes/comfy-flux-nodes
+
 # --- Step 5: Download Models ---
 RUN wget -O ./models/unet/flux1-dev-kontext_fp8_scaled.safensors https://huggingface.co/black-forest-labs/FLUX.1-kontext-fp8/resolve/main/flux1-dev-kontext_fp8_scaled.safensors && \
     wget -O ./models/clip/t5xxl_fp16.safetensors https://huggingface.co/black-forest-labs/FLUX.1-kontext-fp8/resolve/main/t5xxl_fp16.safetensors && \
@@ -30,5 +32,4 @@ RUN wget -O ./models/unet/flux1-dev-kontext_fp8_scaled.safensors https://hugging
     wget -O ./models/vae/ae.safetensors https://huggingface.co/black-forest-labs/FLUX.1-kontext-fp8/resolve/main/ae.safetensors
 
 # --- Step 6: Set the final command ---
-# The handler script is at /src/rp_handler.py, which we copied in Step 1.
 CMD ["python", "-u", "/src/rp_handler.py"]
